# docs/swagger.json
@@ -15,7 +15,7 @@
                 "produces": [
                     "application/json"
                 ],
-                "summary": "Increases the balance of the respective currency in a wallet.",
+                "summary": "Increases or decrease the balance of the respective currency in a wallet.",
                 "parameters": [
                     {
                         "description": "raw",
@@ -36,6 +36,12 @@
                     },
                     "400": {
                         "description": "Bad Request",
+                        "schema": {
+                            "$ref": "#/definitions/models.APIReturn"
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
                         "schema": {
                             "$ref": "#/definitions/models.APIReturn"
                         }
